# hy-home.Learned

./: .cursorrules  .eslintignore  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COLLABORATING.md  CONTRIBUTING.md  GEMINI.md  LICENSE  OPERATIONS.md  README.md  main.py  pyproject.toml  renovate.json
.agent/rules/: python-data-general-rules.md  python-data-science-expert.md  python-data-storage-and-security-rules.md  python-general-rules.md  python-notebooks-and-experiments-rules.md
.agent/workflows/: python-data-project-bootstrap.yaml  python-data-science-experiment.yaml  python-etl-pipeline.yaml  python-reproducible-analysis.yaml  workflow-bug-fix.md
.agent/workflows/Backend/: workflow-api-design.md
.agent/workflows/Database/: setup-local-postgres-database-docker-compose.md  workflow-database-postgresql-setup.md
.claude/: README.md  claude-code.md  gemini-models.md  repository-guide.md  shared-governance.md
.cursor/rules/: data-jupyter-python-cursor-rules.mdc  fastapi-python-microservices-serverless-cursor-rules.mdc  python-function-reflection-assistant.mdc
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.yml  feature-spec.yml  feature_request.md  research_request.md  task.yml
.github/workflows/: ci.yml  generate-changelog.yml  labeler.yml  stale.yml
Studies/Computer-Science/Networks/: 네트워크.md
Studies/Computer-Science/OS/: 운영체제.md
Studies/Data-Structure-and-Algorithm/: 알고리즘.md  자료구조.md
Studies/Database/Cassandra/: [20240706] Cassandra Python Client.ipynb
Studies/Database/InfluxDB/: [20240706] InfluxDB Python Client.ipynb
Studies/Database/Memcached/: [20240706] Memcached Python Client.ipynb
Studies/Database/MySQL/: [20240706] MySQL Python Client.ipynb
Studies/Database/ORM(object-Relational Mapping)/: [20240708] ORM.ipynb
Studies/Handling-Data/: [20240707] Utility.ipynb
Studies/InMemory-Data-Store/Redis/: [20240707] Redis 활용.ipynb
Studies/InMemory-Data-Store/Valkey/: [20240706] Valkey Python Client.ipynb
Studies/Message-Broker/RabbitMQ/: [20240706] RabbitMQ Python Client.ipynb
Studies/Networks/: [20240707] Networks.ipynb
Studies/Programming-Languages/Python/: pyproject.toml
Studies/Programming/Basics/: 디자인패턴.md
Studies/SearchEngine/: [20240706] Opensearch Python Client.ipynb
Studies/Storage/minio/: [20240706] Minio Python Client.ipynb
Studies/Supabase/: [20240706] Supabase Python Client.ipynb
TIL/2024/07/: [20240706] Kafka-Consumer.ipynb  [20240706] Kafka-Producer.ipynb  [20240707] Redis 활용.ipynb  [20240707] Valkey 활용.ipynb
TIL/2024/09/: [20240913] Package-ipaddress.ipynb  [20240913] Poetry.md
TIL/2024/11/: 241130.ipynb
TIL/2024/12/: 241218.ipynb  241220.ipynb
TIL/2025/03/: 250302.ipynb  250310.ipynb  250311.ipynb  250314.ipynb  250319.ipynb
TIL/2025/04/: 250420.ipynb  250421.ipynb
TIL/2025/07/: 250709.ipynb
TIL/2025/08/: 250807.ipynb  250814.ipynb  250828-test.py  250828.ipynb
TIL/2025/09/: 250901.ipynb  250908-receiver.ipynb  250908-sender.ipynb  250923.ipynb  250929.ipynb
TIL/2025/11/: 251124.ipynb  251125.ipynb  251126.ipynb  251129.ipynb
TIL/2025/12/: 251218.ipynb
TIL/2026/: 260107.ipynb
TIL/2026/01/: 260107.ipynb  260121.ipynb  260129.ipynb  260130.ipynb
TIL/2026/04/: ollama.ipynb
docs/: README.md  agent-protocols.md  agent-rules-index.md  development-setup-guide.md  directory-inventory.md  getting-started.md  governance.md  index.md  knowledge-management.md  project-mission.md  structure.md  tech-stack-details.md  workflow.md
docs/00.agent-governance/: README.md  personas.md  standards.md
docs/00.agent-governance/instructions/: code-test-writing-instructions.md  mcp-developer-instructions.md  refactoring-instructions.md  security-audit-instructions.md
docs/00.agent-governance/memory/: README.md  template.md
docs/00.agent-governance/providers/: claude.md  gemini.md
docs/01.prd/: 2026-03-26-agent-governance-refactor.md
docs/05.plans/: 2026-03-26-agent-governance-refactor-plan.md
docs/adr/: 0001-documentation-restructuring.md  0001-lazy-loading-rules.md  0001-record-management-strategy.md  0002-entrypoint-refinement.md  0002-path-pluralization.md  0003-lazy-loading-rules.md  0004-entrypoint-refinement.md  README.md
docs/agentic/: README.md  management.md  personas.md  pillar.md  standards.md
docs/ard/: 0001-documentation-hierarchy.md  0001-documentation-hub-architecture.md  2026-03-15-documentation-structure.md  2026-03-16-documentation-hub-architecture.md  README.md  system-structure.md
docs/guides/: README.md
docs/manuals/: README.md
docs/operations/: README.md
docs/plans/: 2026-03-12-agent-instruction-refactor.md  2026-03-12-root-instruction-entrypoint-refinement.md  2026-03-14-documentation-migration.md  2026-03-14-restructure-plan.md  2026-03-15-refactor-execution.md  2026-03-15-refactor-plan.md  README.md
docs/prd/: 0000-documentation-hub-prd.md  0001-agentic-hub-refinement.md  0002-entrypoint-refinement.md  2026-03-14-agentic-hub-refinement.md  2026-03-14-documentation-hub-prd.md  2026-03-15-entrypoint-refinement.md  2026-03-15-governance-hub.md  README.md  documentation-system-prd.md
docs/runbooks/: README.md  documentation-maintenance.md  operational-procedures.md
docs/specs/: 2026-03-14-documentation-spec.md  2026-03-14-lazy-loading-implementation.md  2026-03-15-metadata-and-trigger-spec.md  2026-03-15-metadata-hardening.md  2026-03-15-metadata-spec.md  README.md
examples/: README.md
examples/00.agent-governance/: README.md
templates/: adr-template.md  api-spec-template.md  ard-template.md  collaboration-guide-template.md  incident-template.md  operations-guide-template.md  plan-template.md  postmortem-template.md  postmortems-template.md  prd-template.md  qa-security-guide-template.md  readme-template.md  runbook-template.md  spec-template.md
(+96 files in other folders)
