[project]
  dependencies=[
    "aiohttp>=3.13.3",
    "aiokafka>=0.13.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.0",
    "arrow>=1.4.0",
    "ascii-magic>=2.7.2",
    "asyncer>=0.0.12",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "awscli>=1.44.16",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.26",
    "cassandra-driver>=3.29.3",
    "celery>=5.6.2",
    "channels[daphne]>=4.3.2",
    "confluent-kafka>=2.13.0",
    "connectorx>=0.4.4",
    "cryptography>=46.0.3",
    "dagster-webserver>=1.12.10",
    "dagster>=1.12.10",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "dbt-postgres>=1.10.0",
    "distributed>=2026.1.1",
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "docker>=7.1.0",
    "duckdb>=1.4.3",
    "faker>=40.1.0",
    "fastapi>=0.128.0",
    "fastrtc>=0.0.34",
    "ffmpeg-python>=0.2.0",
    "finance-datareader>=0.9.101",
    "fugue>=0.9.4",
    "geomet>=1.1.0",
    "geopandas>=1.1.2",
    "getdaft>=0.5.0",
    "gevent>=25.9.1",
    "google-cloud>=0.34.0",
    "grpcio>=1.76.0",
    "gunicorn>=23.0.0",
    "h5py>=3.15.1",
    "idna>=3.11",
    "imageio>=2.37.2",
    "influxdb-client>=1.49.0",
    "invoke>=2.2.1",
    "itsdangerous>=2.2.0",
    "jmespath>=1.0.1",
    "jsonschema>=4.26.0",
    "kreuzberg>=4.0.2",
    "langchain-openai>=1.1.7",
    "langchain>=1.2.6",
    "langgraph>=1.0.6",
    "librosa>=0.11.0",
    "llama-index>=0.14.12",
    "luigi>=3.6.0",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
    "mcp[cli]>=1.25.0",
    "mechanicalsoup>=1.4.0",
    "minio>=7.2.20",
    "mkdocs>=1.6.1",
    "moderngl>=5.12.0",
    "modin[dask]>=0.37.1",
    "mysqlclient>=2.2.7",
    "neo4j>=6.1.0",
    "numba>=0.63.1",
    "openai>=0.27.10",
    "opencv-python>=4.12.0.88",
    "opendartreader>=0.2.3",
    "opensearch-dsl>=2.1.0",
    "opensearch-py>=3.1.0",
    "paho-mqtt>=2.1.0",
    "panda3d>=1.10.16",
    "pandas-datareader>=0.10.0",
    "pandas>=2.3.3",
    "pdfminer-six>=20260107",
    "peewee>=3.19.0",
    "pendulum>=3.1.0",
    "pika>=1.3.2",
    "pillow>=11.3.0",
    "pinecone-client>=6.0.0",
    "polars>=1.37.1",
    "protobuf>=6.33.4",
    "psycopg>=3.3.2",
    "pyarrow>=22.0.0",
    "pyasn1>=0.6.2",
    "pycouchdb>=1.16.0",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.3",
    "pydub>=0.25.1",
    "pyinfra>=3.6",
    "pymemcache>=4.0.0",
    "pymupdf>=1.26.7",
    "pymysql>=1.1.2",
    "pynacl>=1.6.2",
    "pyochain>=0.7.0",
    "pyopengl-accelerate>=3.1.10",
    "pyopengl>=3.1.10",
    "pypdf>=6.6.0",
    "pyquery>=2.0.1",
    "pyspread>=2.4.3",
    "python-barcode>=0.16.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.16.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "quandl>=3.7.0",
    "quantlib>=1.40",
    "quart>=0.20.0",
    "redis>=7.1.0",
    "robotframework>=7.4.1",
    "scapy>=2.7.0",
    "schedule>=1.2.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scrapy>=2.14.1",
    "selenium>=4.32.0",
    "skylos>=3.0.3",
    "sphinx>=7.3.7",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "structlog>=25.5.0",
    "supabase>=2.27.1",
    "ta-lib>=0.6.8",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trio>=0.32.0",
    "twisted>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "valkey>=6.1.1",
    "websockets>=15.0.1",
    "wheel>=0.46.2",
    "xgboost>=3.1.3",
    "xlsxwriter>=3.2.9",
    "xlwings>=0.33.19",
    "yt-dlp>=2025.12.8",
  ]
  description="Add your description here"
  name="hy-home-learned"
  readme="README.md"
  requires-python=">=3.13"
  version="0.1.1"

[build-system]
  build-backend="hatchling.build"
  requires     =["hatchling"]


[dependency-groups]
  dev=[
    "bandit>=1.9.2",
    "black>=25.12.0",
    "commitizen>=4.11.0",
    "complexipy>=5.1.0",
    "coverage>=7.13.1",
    "detect-secrets>=1.5.0",
    "docstr-coverage>=2.3.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "hypothesis>=6.150.1",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "nox>=2025.11.12",
    "nuitka>=2.8.9",
    "pip-audit>=2.10.0",
    "pipdeptree>=2.30.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "setuptools>=80.9.0",
    "tox>=4.34.1",
    "ty>=0.0.11",
    "wheel>=0.45.1",
    "yapf>=0.43.0",
    "zizmor>=1.20.0",
  ]

# --- Tool Settings ---
[tool.ty]
  [tool.ty.environment]
    python-version="3.13"
    # root 필드를 명시적으로 지정하여 경로 인식을 명확히 합니다.
    root=["."]

  # 'src = ["app"]' 대신 아래와 같이 섹션을 분리합니다.
  [tool.ty.src]
    exclude             =[]      # 제외할 경로 (필요 시 작성)
    include             =["TIL"] # Changed from ["TIL"] to match project structure
    respect-ignore-files=true    # .gitignore 준수 여부

[tool.bandit]
  exclude_dirs=[".venv", "tests", "venv"]
  skips       =["B101"]                   # assert 문 사용 허용 (FastAPI 등에서 가끔 사용 시)

[tool.uv]
  managed              =true
  override-dependencies=["py>=1.11.0"]
  package              =false

[tool.ruff]
  include       =["**/pyproject.toml", "*.ipynb", "*.py", "*.pyi"]
  line-length   =120
  target-version="py313"

  [tool.ruff.lint]
    ignore=["E402", "ERA001", "FIX002", "T201", "TD002", "TD003"]
    select=[
      "A",     # flake8-builtins: Avoid shadowing builtins
      "ARG",   # unused-arguments (미사용 인자)
      "ASYNC", # 비동기 코드 최적화
      "B",     # flake8-bugbear: Design problems
      "BLE",   # flake8-blind-except: 에러의 근본 원인을 숨기는 "조용한 실패"를 방지
      "C4",    # flake8-comprehensions: Better comprehensions
      "C90",   # mccabe (복잡도 검사)
      "D",     # pydocstyle (문서화 규칙)
      "DTZ",   # flake8-datetimez: 서버 간 시간 불일치 및 데이터베이스 저장 시 발생하는 타임스탬프 오류를 원천 차단
      "E",     # pycodestyle errors
      "ERA",   # erradicate (주석 처리된 코드)
      "F",     # Pyflakes: Logic errors
      "FA",    # flake8-future-annotations: 타입 체크 성능 향상 및 Mypy Strict Mode와의 호환성을 강화
      "FBT",   # flake8-boolean-trap: 함수의 인자로 True/False를 직접 넘기는 "불린 트랩"을 방지
      "FURB",  # 현대적 리팩토링
      "I",     # isort: Import sorting
      "LOG",   # 로깅 가이드 준수
      "N",     # pep8-naming: Standard naming conventions
      "NPY",   # NumPy 전용 규칙 추가
      "PERF",  # 성능 최적화
      "PL",    # Pylint (파이린트 규칙)
      "PT",    # flake8-pytest-style: Better pytest practices
      "RET",   # 불필요한 return 문 제거
      "RUF",   # Ruff-specific rules
      "S",     # flake8-bandit: Security checks
      "SIM",   # flake8-simplify: Code simplification
      "SLOT",  # flake8-slots: 클래스에 __slots__ 사용을 권장
      "T20",   # flake8-print (프린트문 제한)
      "TCH",   # flake8-type-checking (타입 체크)
      "TID",   # flake8-tidy-imports (임포트 정돈)
      "TRY",   # 잘못된 예외 처리 방지
      "UP",    # pyupgrade: Upgrade syntax
      "W",     # pycodestyle Warnings: PEP 8 표준을 더욱 엄격하게 준수
    ]

    [tool.ruff.lint.per-file-ignores]
      "**/tests/**/*.py"=["S101"]
      "tests/**/*.py"   =["S101"]

    [tool.ruff.lint.pydocstyle]
      # Google 스타일 또는 NumPy 스타일 중 선택 가능
      convention="google"

    [tool.ruff.lint.isort]
      known-first-party=["common", "src"]

    [tool.ruff.lint.flake8-bugbear]
      extend-immutable-calls=[
        "fastapi.Body",
        "fastapi.Cookie",
        "fastapi.Depends",
        "fastapi.Header",
        "fastapi.Path",
        "fastapi.Query",
        "fastapi.Security",
      ]

    [tool.ruff.lint.mccabe]
      max-complexity=10 # 복잡도 임계값 설정 (보통 10 이하 권장)

    [tool.ruff.lint.flake8-tidy-imports]
      ban-relative-imports="all" # CQRS 아키텍처 보호를 위해 절대 경로 임포트 강제

  [tool.ruff.format]
    docstring-code-format=true
    indent-style         ="space"
    quote-style          ="double"

[tool.mypy]
  # 파이썬 버전 설정
  python_version="3.13"
  # 엄격한 타입 체크 활성화
  strict=true
  # 사용 중인 라이브러리(pydantic 등)의 타입 힌트 인식 활성화
  ignore_missing_imports=true
  # 소스 경로 지정
  check_untyped_defs    =true              # 타입 힌트 없는 함수 내부 검사
  disallow_untyped_calls=true              # 타입 정의 없는 함수 호출 금지
  explicit_package_bases=true
  mypy_path             ="."
  plugins               =["pydantic.mypy"]
  warn_unused_ignores   =false             # 불필요한 # type: ignore 경고

  [[tool.mypy.overrides]]
    # 테스트 코드에서는 일부 엄격한 규칙 완화 가능
    disallow_untyped_defs=false
    module               ="tests.*"
    # 외부 데코레이터(pytest.fixture 등)의 타입 정보가 없어도 허용합니다.
    disallow_untyped_decorators=false

[tool.structlog]
  cache_logger_on_first_use=true
  processors=[
    "structlog.contextvars.merge_contextvars",
    "structlog.processors.JSONRenderer()",
    "structlog.processors.TimeStamper(fmt='iso')",
    "structlog.processors.add_log_level",
    "structlog.processors.format_exc_info",
  ]

[tool.docstr-coverage]
  badge         ="docs/coverage_badge.svg"
  exclude       =["build", "docs", "setup.py", "tests"]
  fail-under    =80                                     # 80%로 조정 (유연성 확보)
  skip-class-def=false
  skip-file-doc =false
  skip-init     =true
  skip-magic    =true
  verbose       =2

[tool.pydantic-mypy]
  init_forbid_extra            =true
  init_typed                   =true
  warn_required_dynamic_aliases=true

[tool.coverage.run]
  omit  =["**/__init__.py", "tests/*"]
  source=["TIL"]

[tool.coverage.report]
  fail_under  =80   # 커버리지가 80% 미만이면 에러 발생 (품질 강제)
  show_missing=true

[tool.commitizen]
  major_version_zero      =true
  name                    ="cz_conventional_commits"
  tag_format              ="v$version"
  update_changelog_on_bump=true
  version_provider        ="pep621"
  version_scheme          ="semver"

[tool.pytest.ini_options]
  # -n auto: 코어 수에 맞춰 병렬 실행
  # --html=report.html: 결과 보고서 생성
  # --self-contained-html: CSS를 포함한 단일 파일 생성
  addopts  ="--ignore=tests/load/ --cov=. --cov-report=term-missing -n auto --html=report.html --self-contained-html"
  testpaths=["libs/*/tests", "services/*/tests", "tests"]
  # 비동기 테스트 모드 자동 설정 (Strict 모드 권장)
  asyncio_default_fixture_loop_scope="function"
  asyncio_mode                      ="auto"
