[project]
  dependencies   =[]
  description    ="Add your description here"
  name           ="hy-home-learned"
  readme         ="README.md"
  requires-python=">=3.13"
  version        ="0.1.1"

[build-system]
  build-backend="hatchling.build"
  requires     =["hatchling"]


[dependency-groups]
  dev=[
    "bandit>=1.9.2",
    "commitizen>=4.11.0",
    "complexipy>=5.1.0",
    "coverage>=7.13.1",
    "detect-secrets>=1.5.0",
    "docstr-coverage>=2.3.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.11",
    "mypy>=1.19.1",
    "nox>=2026.2.9",
    "nuitka>=2.8.9",
    "pip-audit>=2.10.0",
    "pipdeptree>=2.34.0",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "setuptools>=80.9.0",
    "tox>=4.34.1",
    "ty>=0.0.11",
    "wheel>=0.45.1",
    "zizmor>=1.20.0",
  ]

# --- Tool Settings ---
[tool.ty]
  [tool.ty.environment]
    python-version="3.13"
    # root 필드를 명시적으로 지정하여 경로 인식을 명확히 합니다.
    root=["."]

  # 'src = ["app"]' 대신 아래와 같이 섹션을 분리합니다.
  [tool.ty.src]
    exclude             =[]      # 제외할 경로 (필요 시 작성)
    include             =["TIL"] # Changed from ["TIL"] to match project structure
    respect-ignore-files=true    # .gitignore 준수 여부

[tool.bandit]
  exclude_dirs=[".venv", "tests", "venv"]
  skips       =["B101"]                   # assert 문 사용 허용 (FastAPI 등에서 가끔 사용 시)

[tool.uv]
  managed              =true
  override-dependencies=["py>=1.11.0"]
  package              =false

[tool.ruff]
  include       =["**/pyproject.toml", "*.ipynb", "*.py", "*.pyi"]
  line-length   =120
  target-version="py313"

  [tool.ruff.lint]
    ignore=["E402", "ERA001", "FIX002", "T201", "TD002", "TD003"]
    select=[
      "A",     # flake8-builtins: Avoid shadowing builtins
      "ARG",   # unused-arguments (미사용 인자)
      "ASYNC", # 비동기 코드 최적화
      "B",     # flake8-bugbear: Design problems
      "BLE",   # flake8-blind-except: 에러의 근본 원인을 숨기는 "조용한 실패"를 방지
      "C4",    # flake8-comprehensions: Better comprehensions
      "C90",   # mccabe (복잡도 검사)
      "D",     # pydocstyle (문서화 규칙)
      "DTZ",   # flake8-datetimez: 서버 간 시간 불일치 및 데이터베이스 저장 시 발생하는 타임스탬프 오류를 원천 차단
      "E",     # pycodestyle errors
      "ERA",   # erradicate (주석 처리된 코드)
      "F",     # Pyflakes: Logic errors
      "FA",    # flake8-future-annotations: 타입 체크 성능 향상 및 Mypy Strict Mode와의 호환성을 강화
      "FBT",   # flake8-boolean-trap: 함수의 인자로 True/False를 직접 넘기는 "불린 트랩"을 방지
      "FURB",  # 현대적 리팩토링
      "I",     # isort: Import sorting
      "LOG",   # 로깅 가이드 준수
      "N",     # pep8-naming: Standard naming conventions
      "NPY",   # NumPy 전용 규칙 추가
      "PERF",  # 성능 최적화
      "PL",    # Pylint (파이린트 규칙)
      "PT",    # flake8-pytest-style: Better pytest practices
      "RET",   # 불필요한 return 문 제거
      "RUF",   # Ruff-specific rules
      "S",     # flake8-bandit: Security checks
      "SIM",   # flake8-simplify: Code simplification
      "SLOT",  # flake8-slots: 클래스에 __slots__ 사용을 권장
      "T20",   # flake8-print (프린트문 제한)
      "TCH",   # flake8-type-checking (타입 체크)
      "TID",   # flake8-tidy-imports (임포트 정돈)
      "TRY",   # 잘못된 예외 처리 방지
      "UP",    # pyupgrade: Upgrade syntax
      "W",     # pycodestyle Warnings: PEP 8 표준을 더욱 엄격하게 준수
    ]

    [tool.ruff.lint.per-file-ignores]
      "**/tests/**/*.py"=["S101"]
      "tests/**/*.py"   =["S101"]

    [tool.ruff.lint.pydocstyle]
      # Google 스타일 또는 NumPy 스타일 중 선택 가능
      convention="google"

    [tool.ruff.lint.isort]
      known-first-party=["common", "src"]

    [tool.ruff.lint.flake8-bugbear]
      extend-immutable-calls=[
        "fastapi.Body",
        "fastapi.Cookie",
        "fastapi.Depends",
        "fastapi.Header",
        "fastapi.Path",
        "fastapi.Query",
        "fastapi.Security",
      ]

    [tool.ruff.lint.mccabe]
      max-complexity=10 # 복잡도 임계값 설정 (보통 10 이하 권장)

    [tool.ruff.lint.flake8-tidy-imports]
      ban-relative-imports="all" # CQRS 아키텍처 보호를 위해 절대 경로 임포트 강제

  [tool.ruff.format]
    docstring-code-format=true
    indent-style         ="space"
    quote-style          ="double"

[tool.mypy]
  # 파이썬 버전 설정
  python_version="3.13"
  # 엄격한 타입 체크 활성화
  strict=true
  # 사용 중인 라이브러리(pydantic 등)의 타입 힌트 인식 활성화
  ignore_missing_imports=true
  # 소스 경로 지정
  check_untyped_defs    =true              # 타입 힌트 없는 함수 내부 검사
  disallow_untyped_calls=true              # 타입 정의 없는 함수 호출 금지
  explicit_package_bases=true
  mypy_path             ="."
  plugins               =["pydantic.mypy"]
  warn_unused_ignores   =false             # 불필요한 # type: ignore 경고

  [[tool.mypy.overrides]]
    # 테스트 코드에서는 일부 엄격한 규칙 완화 가능
    disallow_untyped_defs=false
    module               ="tests.*"
    # 외부 데코레이터(pytest.fixture 등)의 타입 정보가 없어도 허용합니다.
    disallow_untyped_decorators=false

[tool.structlog]
  cache_logger_on_first_use=true
  processors=[
    "structlog.contextvars.merge_contextvars",
    "structlog.processors.JSONRenderer()",
    "structlog.processors.TimeStamper(fmt='iso')",
    "structlog.processors.add_log_level",
    "structlog.processors.format_exc_info",
  ]

[tool.docstr-coverage]
  badge         ="docs/coverage_badge.svg"
  exclude       =["build", "docs", "setup.py", "tests"]
  fail-under    =80                                     # 80%로 조정 (유연성 확보)
  skip-class-def=false
  skip-file-doc =false
  skip-init     =true
  skip-magic    =true
  verbose       =2

[tool.pydantic-mypy]
  init_forbid_extra            =true
  init_typed                   =true
  warn_required_dynamic_aliases=true

[tool.coverage.run]
  omit  =["**/__init__.py", "tests/*"]
  source=["TIL"]

[tool.coverage.report]
  fail_under  =80   # 커버리지가 80% 미만이면 에러 발생 (품질 강제)
  show_missing=true

[tool.commitizen]
  major_version_zero      =true
  name                    ="cz_conventional_commits"
  tag_format              ="v$version"
  update_changelog_on_bump=true
  version_provider        ="pep621"
  version_scheme          ="semver"

[tool.pytest.ini_options]
  # -n auto: 코어 수에 맞춰 병렬 실행
  # --html=report.html: 결과 보고서 생성
  # --self-contained-html: CSS를 포함한 단일 파일 생성
  addopts  ="--ignore=tests/load/ --cov=. --cov-report=term-missing -n auto --html=report.html --self-contained-html"
  testpaths=["libs/*/tests", "services/*/tests", "tests"]
  # 비동기 테스트 모드 자동 설정 (Strict 모드 권장)
  asyncio_default_fixture_loop_scope="function"
  asyncio_mode                      ="auto"
